--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ subprojects {
 		//lombok
 		compileOnly 'org.projectlombok:lombok'
 		annotationProcessor 'org.projectlombok:lombok'
+		testCompileOnly('org.projectlombok:lombok')
+		testAnnotationProcessor("org.projectlombok:lombok")
+
 		//gson
 		implementation "com.google.code.gson:gson:2.9.0"
 		implementation 'com.google.guava:guava:31.1-jre'
