[수정] 하이버네이트 sql 로그 false처리

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
   jpa:
     open-in-view: false
     defer-datasource-initialization: true
-    show_sql: true
+    show_sql: false
     hibernate:
       ddl-auto: none
   redis:
