--- a/api/build.gradle
+++ b/api/build.gradle
@@ -17,6 +17,15 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation project(path: ":common", configuration: "default")
 
+    // resilience4j
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+    implementation 'io.github.resilience4j:resilience4j-spring-boot2:1.7.0'
+
+    // Retry, Circuit Breaker 관련 의존성 추가
+    implementation 'io.github.resilience4j:resilience4j-retry:1.7.0'
+    implementation 'io.github.resilience4j:resilience4j-circuitbreaker:1.7.0'
+
 }
 
 test {
