--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 HELP.md
 .gradle
-build/
+/build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-
+/build
 ### STS ###
 .apt_generated
 .classpath
